--- a/src/app/app-view/ui/notes-list-group-element/notes-list-group-element.component.scss
+++ b/src/app/app-view/ui/notes-list-group-element/notes-list-group-element.component.scss
@@ -1,4 +1,4 @@
-@use "src/scss/utils.scss" as *;
+@use 'src/scss/utils.scss' as *;
 
 :host {
   --container-size: max(240px, 25vw);
@@ -7,9 +7,9 @@
 
 .note-list-card {
   display: grid;
-  gap: free-space("xs");
-  padding: free-space("sm");
-  @include border-radius("xs");
+  gap: free-space('xs');
+  padding: free-space('sm');
+  @include border-radius('xs');
   background-color: var(--color-accent-100);
   cursor: pointer;
   transition: background-color 300ms 50ms ease-in-out,
@@ -17,10 +17,6 @@
 
   &.to-delete {
     background-color: rgb(212, 212, 212, 0.6);
-
-    @media (prefers-color-scheme: dark) {
-      background-color: rgba(45, 45, 45);
-    }
   }
 
   &__header {
@@ -28,6 +24,10 @@
     justify-content: space-between;
     align-items: center;
   }
+}
+
+::ng-deep .dark .note-list-card.to-delete {
+  background-color: rgb(65, 65, 65);
 }
 
 ::ng-deep .mat-mdc-standard-chip .mdc-evolution-chip__cell--primary {
@@ -44,10 +44,6 @@
 
   .note-list-card.to-delete & {
     background-color: rgb(190, 190, 190) !important;
-
-    @media (prefers-color-scheme: dark) {
-      background-color: rgb(65, 65, 65) !important;
-    }
   }
 
   &.do-not-grow {
@@ -57,31 +53,29 @@
   &-container {
     display: flex;
     align-items: center;
-    gap: free-space("xs") calc(#{free-space("xs")} / 2);
+    gap: free-space('xs') calc(#{free-space('xs')} / 2);
     flex-wrap: wrap;
   }
+}
+
+::ng-deep
+  .dark
+  .note-list-card.to-delete[_ngcontent-ng-c537040186]
+  .chip[_ngcontent-ng-c537040186] {
+  background-color: rgb(100, 100, 100) !important;
 }
 
 h3 {
   width: 100%;
   max-width: calc(
     var(--container-size) -
-      (2 * #{free-space("sm")} + var(--more-vert-icon-size))
+      (2 * #{free-space('sm')} + var(--more-vert-icon-size))
   );
+  -webkit-user-select: none;
+  color: var(--contrast-color-accent-100);
   user-select: none;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-}
-
-::ng-deep
-  .mat-mdc-standard-chip:not(.mdc-evolution-chip--disabled)
-  .mdc-evolution-chip__text-label {
-  max-width: calc(
-    var(--container-size) -
-      (2 * #{free-space("sm")} + var(--more-vert-icon-size))
-  );
-  white-space: nowrap !important;
-  overflow: hidden !important;
-  text-overflow: ellipsis !important;
+  letter-spacing: 1px;
 }
